# kubepants

./: README.md  pyproject.toml
kubepants/: kubepants.py  main.py  specs.py
