[tool.poetry]
name = "kubepants"
version = "0.0.1"
description = "Kubernetes pantsing tool written in python"
authors = ["Adam Frank <afrank@mozilla.com>"]

[tool.poetry.dependencies]
python = ">=3.4"
kubernetes = "*"

[tool.poetry.scripts]
kubepants = "kubepants.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
